# hicolor-icon-theme

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  autogen.sh  configure  configure.ac  index.theme
spec/: icon-naming-spec.xml  icon-theme-spec.xml
